--- a/develop.cfg
+++ b/develop.cfg
@@ -65,7 +65,7 @@
 #
 # To use a python package that is being developed in your src subdirectory, use:
 # myproduct.betterplone = fs myproduct.betterplone
-collective.announcement = fs collective.announcement
+collective.announcement = git https://github.com/b4oshany/collective.announcement.git
 
 
 [buildout]
@@ -118,7 +118,6 @@ extensions +=
 eggs +=
     Products.DocFinderTab
     plone.reload
-    collective.announcement
 
 parts +=
     test
